# sysinfocollector

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/sice/: __init__.py  main.py  report.R  view.html
