[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sice"
authors = [{name = "Watal M. Iwasaki", email = "heavywatal@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["description", "version"]
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "polars",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.urls]
Source = "https://github.com/heavywatal/sysinfocollector"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",   # missing docstring
  "D203", # incompatible
  "D213", # incompatible
  "ANN401", # Any
  "T201", # print
  "S101", # assert
  "DTZ",  # timezone
  "COM812", # trailing comma
  "ISC001", # may conflict with formatter
  "TD",   # todo
  "FIX",  # todo
]
